# Velith

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: verifier.Dockerfile
docs/: DECISIONS.md  M0_SPEC.md  M1_IMPLEMENTATION_HANDOFF.md  M1_SPEC.md  M2_IMPLEMENTATION_HANDOFF.md  M2_SPEC.md  M3_IMPLEMENTATION_HANDOFF.md  M3_SPEC.md  M4_IMPLEMENTATION_HANDOFF.md  M4_SPEC.md  M5_IMPLEMENTATION_HANDOFF.md  M5_SPEC.md  M6_IMPLEMENTATION_HANDOFF.md  M6_SPEC.md  NOTES.md  PROJECT_STATE.md  VISION.md
src/velith/: __init__.py  task.py
src/velith/agent/: __init__.py  proposer.py
src/velith/arms/: __init__.py  binding.py  filters.py  identity.py  memory_view.py
src/velith/batch/: __init__.py  adapter.py  budget.py  model.py  provenance.py  runner.py
src/velith/core/: __init__.py  config.py  logging.py
src/velith/corpus/: __init__.py  heldout.py  loader.py  manifest.py
src/velith/episodes/: __init__.py  episode.py  index.py  store.py
src/velith/harness/: __init__.py  verifier_sandbox.py
src/velith/llm/: __init__.py  client.py
src/velith/retrieval/: __init__.py  embedding.py  memory.py  query.py  retriever.py
src/velith/runner/: __init__.py  spike.py
tests/: __init__.py  conftest.py  sanity_test.py
tests/fixtures/: conftest.py
tests/fixtures/calc_add_bug/: calculator.py  (+3 more)
tests/integration/: __init__.py  test_m3_store_index.py  test_m4_corpus_heldout.py  test_m5_batch_a0.py  test_m6_retrieval.py  test_spike_episode.py
tests/unit/: __init__.py  test_arms_binding.py  test_arms_filters.py  test_arms_identity.py  test_arms_memory_view.py  test_batch_adapter.py  test_batch_budget.py  test_batch_model.py  test_batch_provenance.py  test_batch_runner.py  test_config.py  test_corpus_loader.py  test_corpus_manifest.py  test_episode.py  test_episode_index.py  test_heldout_lock.py  test_proposer.py  test_retrieval_embedding.py  test_retrieval_memory.py  test_retrieval_query.py  test_retrieval_retriever.py  test_store.py  test_task.py  test_verifier_sandbox.py
(+2 files in other folders)
