[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "velith"
version = "0.0.0"
description = "Velith — a grounded, verification-first engineering intelligence (M0 skeleton)."
readme = "README.md"
requires-python = "==3.12.*"
license = { text = "Proprietary" }
authors = [{ name = "Velith" }]
dependencies = [
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
]

[project.optional-dependencies]
dev = [
    "ruff==0.6.9",
    "mypy==1.11.2",
    "pytest==8.3.3",
    "pre-commit==3.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/velith"]

# ----------------------------------------------------------------------------
# Ruff: single source of truth for lint AND format (M0 §7).
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["velith"]

# ----------------------------------------------------------------------------
# mypy: strict mode, zero errors required (M0 §7).
# ----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_reexport = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ----------------------------------------------------------------------------
# pytest: tests discovered under tests/ (M0 §8).
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-q"
